reject or approve report

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
   <!-- endinject -->
   <!-- Layout styles -->
   <!-- End layout styles -->
+   <!-- Add Font Awesome CDN link to the head of your index.html -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <link rel="shortcut icon" href="/assets/bootstrap-template/favicon.png" /></head>
 <body>
   <app-root></app-root>
