crud et service avancée

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
+
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
@@ -19,8 +21,15 @@
   <!-- endinject -->
   <!-- Layout styles -->
   <!-- End layout styles -->
-  <link rel="shortcut icon" href="/assets/bootstrap-template/favicon.png" /></head>
-<body>
+  <link rel="shortcut icon" href="/assets/bootstrap-template/favicon.png" />  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
